fdo#76132: Don't create a formula group of length 1.

That's asking for trouble.

Change-Id: I6aaa4d1e2aed4f166ee216c3eb02d3b7794c9a8c